# shadowin

./: .gitignore  .rusty_fixer_cache.db  Cargo.toml  README.md
src/: ai_renderer.rs  loading.rs  main.rs
src/ui/: mod.rs  widgets.rs
